--- a/app/modules/dataset/templates/dataset/upload_dataset.html
+++ b/app/modules/dataset/templates/dataset/upload_dataset.html
@@ -645,11 +645,11 @@
     {% endif %}
 
     {% if request.path.startswith('/dataset/staging-area') %}
-    <div class="col-12">
-
-        <button type="button" class="btn btn-primary mt-2" id="update_button">Update Dataset</button>
-        <div id="error_message" style="color: red;"></div>
+    <div class="d-flex align-items-center mt-2">
+        <button type="button" class="btn btn-primary me-2" id="update_button">Update Dataset</button>
+        <button type="button" class="btn btn-danger" id="delete_button">Delete Dataset</button>
     </div>
+    <div id="error_message" style="color: red;"></div>
         
     {% endif %}
 
