Fix: integration problem

--- a/app/modules/explore/templates/explore/index.html
+++ b/app/modules/explore/templates/explore/index.html
@@ -17,7 +17,6 @@
             <div class="row">
                 <div id="results"></div>
 
-                {% if not datasets %}
                 <div class="col text-center" id="results_not_found">
                     <img src="{{ url_for('static', filename='img/items/not_found.svg') }}"
                          style="width: 50%; max-width: 100px; height: auto; margin-top: 30px"/>
@@ -29,53 +28,7 @@
             <div id="results_not_found" style="text-align: center;">
 
                 </div>
-                {% else %}                
-                    {% for dataset in datasets %}
-                    <div class="card mb-3" style="border: 1px solid #d3d3d3;">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <h2 class="h3 mb-1">
-                                    <a href="{{ dataset.get_uvlhub_doi() }}" class="text-decoration-none text-dark">
-                                        {{ dataset.ds_meta_data.title }}
-                                    </a>
-                                </h2>
-                                <span class="badge bg-secondary">{{ dataset.get_cleaned_publication_type() }}</span>
-                            </div>
-                            
-                            <p class="mb-2 text-secondary fs-4">{{ dataset.ds_meta_data.description }}</p>
-
-                            <div class="d-flex flex-wrap mb-2">
-                                {% for tag in dataset.ds_meta_data.tags.split(',') %}
-                                    <span class="badge me-2 fs-7" style="background-color: lightSkyBlue; color: rgb(0, 119, 255);">{{ tag.strip() }}</span>
-                                {% endfor %}
-                            </div>
-
-                            <div class="row mb-2">
-                                <div class="col-md-12 col-12 d-flex align-items-center">
-                                    <span class="me-2">Rating:</span>
-                                        <div id="star-rating-{{ dataset.id }}" class="stars d-flex" style="color: gold;">
-                                            {% for i in range(1, 6) %}
-                                                <span data-value="{{ i }}" class="me-1">★</span>
-                                            {% endfor %}
-                                        </div>
-                                    <span id="average-rating-{{ dataset.id }}" class="ms-2">-</span> <!-- Valor inicial vacío -->
-                                    <span class="ms-2">·</span>
-                                    <span class="ms-2">Created on {{ dataset.created_at.strftime('%d %b %Y') }}</span>
-                                </div>
-                            </div>
-                            
-                            <div class="d-flex">
-                                <a href="{{ dataset.get_uvlhub_doi() }}" class="btn btn-sm btn-outline-primary me-2">
-                                    <i data-feather="eye"></i> View Dataset
-                                </a>
-                                <a href="/dataset/download/{{ dataset.id }}" class="btn btn-sm btn-outline-success">
-                                    <i data-feather="download"></i> Download ({{ dataset.get_file_total_size_for_human() }})
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                {% endif %}
+                    
 
         </div>
     </div>
@@ -130,19 +83,14 @@
 
                 <div class="col-lg-6">
                     <div class="mb-3">
-                        <label class="form-label" for="query">
-                            Search for datasets by author
-                        </label>
-                        <input class="form-control" id="queryAuthor" name="queryAuthor" required="" type="text"
-                            value="">
+                        <label class="form-label" for="queryAuthor">Search for datasets by author</label>
+                        <input class="form-control" id="queryAuthor" name="queryAuthor" required="" type="text" value="">
                     </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="mb-3">
-                        <label class="form-label" for="query">
-                            Search for datasets by tag
-                        </label>
+                        <label class="form-label" for="queryTag">Search for datasets by tag</label>
                         <input class="form-control" id="queryTag" name="queryTag" required="" type="text" value="">
                     </div>
                 </div>
@@ -151,21 +99,15 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="mb-3">
-                        <label class="form-label" for="query">
-                            Search for datasets by number of features
-                        </label>
-                        <input class="form-control" id="queryFeatures" name="queryFeatures" required="" type="text"
-                            value="">
+                        <label class="form-label" for="queryFeatures">Search for datasets by number of features</label>
+                        <input class="form-control" id="queryFeatures" name="queryFeatures" required="" type="text" value="">
                     </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="mb-3">
-                        <label class="form-label" for="query">
-                            Search for datasets by number of models
-                        </label>
-                        <input class="form-control" id="queryModels" name="queryModels" required="" type="text"
-                            value="">
+                        <label class="form-label" for="queryModels">Search for datasets by number of models</label>
+                        <input class="form-control" id="queryModels" name="queryModels" required="" type="text" value="">
                     </div>
                 </div>
             </div>
@@ -222,33 +164,14 @@
     </div>
 
 </div>
-
-
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         {% for dataset in datasets %}
             updateAverageRating({{ dataset.id }});
         {% endfor %}
-
-        // Función para actualizar el promedio de calificación en el frontend
-        function updateAverageRating(datasetId) {
-            fetch(`/datasets/${datasetId}/average-rating`)
-            .then(response => response.json())
-            .then(data => {
-                const averageRating = data.average_rating.toFixed(1);
-                document.getElementById('average-rating-' + datasetId).innerText = averageRating;
-
-                // Resaltar estrellas según el promedio de calificación
-                const starRatingContainer = document.getElementById('star-rating-' + datasetId);
-                starRatingContainer.querySelectorAll('span').forEach(star => {
-                    const starValue = parseInt(star.getAttribute('data-value'));
-                    star.style.color = starValue <= Math.round(averageRating) ? '#FFD700' : '#ddd';
-                });
-            })
-            .catch(error => console.error('Error fetching average rating:', error));
-        }
     });
-</script>
+    </script>
+
 {% endblock %}
 
 {% block scripts %}
