--- a/app/modules/community/templates/community/index_my_communities.html
+++ b/app/modules/community/templates/community/index_my_communities.html
@@ -11,17 +11,13 @@
     <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 row-cols-12 g-4">
         {% for community in communities %}
         <div class="col">
-            <!-- Envolver todo el div con un enlace para hacerlo clicable -->
             <a href="{{ url_for('community.show_community', community_id=community.id) }}" class="text-decoration-none">
                 <div class="card h-100">
-                    <!-- Renderiza el logo dinámico o el predeterminado -->
                     <img src="{{ url_for('static', filename=community.logo) }}" 
                         class="card-img-top custom-img" alt="{{ community.name }}">
                     <div class="card-body custom-card-body">
                         <h5 class="card-title">{{ community.name }}</h5>
-                        <p class="card-text">
-                            {{ community.description }}
-                        </p>
+                        <p class="card-text">{{ community.description }}</p>
                     </div>
                 </div>
             </a>
