--- a/app/modules/profile/templates/profile/summary.html
+++ b/app/modules/profile/templates/profile/summary.html
@@ -49,24 +49,31 @@
                         <tbody>
                           
                             {% for dataset in datasets %}
-                            <tr>
-                                <td>
-
-                                    {% if dataset.ds_meta_data.dataset_doi %}
-                                        <a href="{{ dataset.get_uvlhub_doi() }}">
-                                            {{ dataset.ds_meta_data.title }}
-                                        </a>
-                                    {% else %}
-                                        <a href="{{ url_for('dataset.get_unsynchronized_dataset', dataset_id=dataset.id) }}">
-                                            {{ dataset.ds_meta_data.title }}
-                                        </a>                                    
-                                    {% endif %}
-
-                                    
-                                </td>
-                                <td>{{ dataset.ds_meta_data.publication_type.name.replace('_', ' ').title() }}</td>
-                            </tr>
-                            {% else %}
+                        <tr>
+                            <td>
+                                {% if dataset.ds_meta_data.dataset_doi %}
+                                    <a href="{{ dataset.get_uvlhub_doi() }}">
+                                        {{ dataset.ds_meta_data.title }}
+                                    </a>
+                                {% elif dataset.ds_meta_data.dataset_fakenodo_doi and not dataset.ds_meta_data.staging_area %}
+                                    <a href="{{ url_for('dataset.get_fakenodo_synchronized_dataset', dataset_id=dataset.id) }}">
+                                        {{ dataset.ds_meta_data.title }}
+                                    </a>
+                                {% elif dataset.ds_meta_data.staging_area %}
+                                    <a href="{{ url_for('dataset.update_staging_area_dataset', dataset_id=dataset.id) }}">
+                                        {{ dataset.ds_meta_data.title }}
+                                    </a>
+                                {% elif not dataset.ds_meta_data.dataset_fakenodo_doi and not dataset.ds_meta_data.staging_area %}
+                                    <a href="{{ url_for('dataset.get_unsynchronized_dataset', dataset_id=dataset.id) }}">
+                                        {{ dataset.ds_meta_data.title }}
+                                    </a>
+                                {% else %}
+                                    {{ dataset.ds_meta_data.title }}
+                                {% endif %}
+                            </td>
+                            <td>{{ dataset.ds_meta_data.publication_type.name.replace('_', ' ').title() }}</td>
+                        </tr>
+                        {% else %}
                           
                             <tr>
                                 <td colspan="2">No datasets uploaded.</td>
