--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -33,6 +33,9 @@ chico sundermann">
 
     <link rel="stylesheet" href="{{ url_for("static", filename="css/own.css") }}">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
     <!-- Add custom CSS to hide the sidebar initially -->
     <style>
         /* Sidebar initially collapsed with width 0 */
@@ -153,6 +156,16 @@ chico sundermann">
                 <li class="sidebar-item {{ 'active' if request.endpoint == 'community.index_joined_communities' else '' }}">
                     <a class="sidebar-link" href="{{ url_for('community.index_joined_communities') }}">
                         <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">My Joined Communities</span>
+                    </a>
+                </li>
+
+                <!-- Enlace al bot de Discord -->
+                <li class="sidebar-header">
+                    Discord
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" href="https://discord.com/oauth2/authorize?client_id=1316178152070053888&permissions=8&integration_type=0&scope=bot" target="_blank">
+                        <i class="fab fa-discord align-middle"></i> <span class="align-middle">Add pringa_bot</span>
                     </a>
                 </li>
                 
