Feat: explore datasets button change color

--- a/app/modules/public/templates/public/index.html
+++ b/app/modules/public/templates/public/index.html
@@ -55,7 +55,7 @@
             </div>
             {% endfor %}
             
-            <a href="/explore" class="btn btn-primary">
+            <a href="/explore" class="btn btn-primary" style="background-color: #24292f; border-color: #24292f;">
                 <i data-feather="search"></i> Explore More Datasets
             </a>
         </div>
